smol spacing fix

--- a/src/styles/resumeItem.module.css
+++ b/src/styles/resumeItem.module.css
@@ -1,7 +1,7 @@
 /* ResumeItem.module.css */
 
 .resumeItem {
-    padding: 5px;
+    padding: 2px;
     
 }
 
@@ -25,13 +25,11 @@
   
 .positionName1 {
     font-size: 1em;
-    margin-bottom: 2px;
 }
 
 .positionName2 {
     font-size: 1em;
-    margin-top: 10px;
-    margin-bottom: 2px;
+    margin-top: 15px;
 }
   
 .teamName {
